# C99_and_friends_today

./: CKickfile  CMakeLists.txt  README.md
resource/: somecode.c  someotherc.c
src/: CMakeLists.txt  compile_at_runtime.c  dynamic_library.c  dynamic_load.c  pipe.c  sockets_inet.c  template_specialization.cc  trait.cc  vtable.c
