add_library(dynamic_library SHARED dynamic_library.c)
target_link_libraries(dynamic_library dl)
add_executable(vtable vtable.c)
add_executable(pipe pipe.c)
add_executable(dynamic_load dynamic_load.c)
add_executable(compile_at_runtime compile_at_runtime.c)
add_executable(sockets_server sockets_inet.c)
add_executable(template_specialization template_specialization.cc)
add_executable(trait trait.cc)